# cdc-natality-birth-outcomes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
data/fixtures/: synthetic_records.txt
data/processed/: README.md  natality_analysis_2016_meta.json  natality_analysis_2017_meta.json  natality_analysis_2018_meta.json  natality_analysis_2019_meta.json  natality_analysis_2020_meta.json  natality_analysis_2021_meta.json  natality_analysis_2022_meta.json  natality_analysis_2023_meta.json  natality_analysis_2024_meta.json  process_summary.json
data/raw/: README.md  download_manifest.json
docs/: DATA_PROVENANCE.md  VARIABLES.md  index.html
docs/css/: style.css
paper/: paper.md
results/: analysis_manifest.json
results/models/: logit_cesarean.json  logit_cesarean_coefs.csv  logit_lbw.json  logit_lbw_coefs.csv  logit_low_apgar5.json  logit_low_apgar5_coefs.csv  logit_nicu.json  logit_nicu_coefs.csv  logit_preterm.json  logit_preterm_coefs.csv
results/tables/: black_white_gaps.csv  disparity_race_cesarean.csv  disparity_race_lbw.csv  disparity_race_nicu.csv  disparity_race_preterm.csv  education_gradient_lbw.csv  education_gradient_nicu.csv  education_gradient_preterm.csv  key_findings.json  overall_summary.json  pnc_gradient_lbw.csv  pnc_gradient_nicu.csv  pnc_gradient_preterm.csv  stratified_rates.csv  (+2 more)
scripts/: build_paper.py  build_site.py  download_natality.py  finish_analysis.py  process_all_years.py  process_natality.py  run_analysis.py
site/: README.md
tests/: test_analyze.py  test_parser.py
(+7 files in other folders)
