[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-natality-birth-outcomes"
version = "1.0.0"
description = "Reproducible analysis of U.S. birth outcomes from CDC Natality public-use files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "statsmodels>=0.14.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
